--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -2,7 +2,7 @@
   "slack.roles.workspace_primary_owner": "워크스페이스 주 소유자",
   "slack.roles.workspace_owners": "워크스페이스 소유자",
   "slack.roles.workspace_admins": "워크스페이스 관리자",
-  "slack.roles.full_members": "전체 멤버",
+  "slack.roles.full_members": "정식 멤버",
   "slack.roles.multi_channel_guests": "멀티 채널 게스트",
   "slack.roles.single_channel_guests": "단일 채널 게스트",
   "slack.roles.channel_managers": "채널 매니저",
