--- a/packages/extension/src/locales/en.json
+++ b/packages/extension/src/locales/en.json
@@ -85,7 +85,7 @@
   "ui.side_modal.service_in_progress": "Service integration in progress",
   "ui.side_modal.already_logged_in": "It looks like you're already logged in",
   "ui.side_modal.current_workspace": "Currently connected workspace",
-  "ui.side_modal.admin_permission_required": "Please make sure you have administrator privileges for the workspace.",
+  "ui.side_modal.admin_permission_required": "Admin access required to connect.",
   "ui.side_modal.change_account_instruction": "To connect with a different {{serviceName}} account, please change the login account on this page.",
   "ui.side_modal.refresh_login_status": "Check login status again",
   "ui.side_modal.continue_instruction": "Click the 'Authenticate' button to continue.",
