--- a/packages/extension/src/locales/ko.json
+++ b/packages/extension/src/locales/ko.json
@@ -85,7 +85,7 @@
   "ui.side_modal.service_in_progress": "서비스 연동 진행 중",
   "ui.side_modal.already_logged_in": "이미 로그인이 되어 있는 것 같아요",
   "ui.side_modal.current_workspace": "현재 연결된 워크스페이스",
-  "ui.side_modal.admin_permission_required": "연결하려면 워크스페이스의 관리자 권한이 있는지 확인해주세요.",
+  "ui.side_modal.admin_permission_required": "관리자 권한이 있는 곳만 연결 할 수 있어요.",
   "ui.side_modal.change_account_instruction": "다른 {{serviceName}} 계정으로 연동하시려면 이 페이지에서 로그인 계정을 변경해주세요.",
   "ui.side_modal.refresh_login_status": "로그인 상태 다시 확인",
   "ui.side_modal.continue_instruction": "계속 진행하시려면 \"인증\" 버튼을 클릭하세요.",
