Squashed commit of the following:
commit 960dedc748779f23ffb27dee8965347e1da03481
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Tue Nov 25 18:46:13 2025 +0900

    feat: Login Modal Done

commit a214a0c93b768bee388bbc5239d90abc8c82baf8
Merge: cde6eb0 a7d44b2
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Tue Nov 25 18:00:01 2025 +0900

    Merge branch 'main' into feater/로그인-모달

commit cde6eb0a04c0d59a1ea3d915c0f78974c3c86778
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Tue Nov 25 15:33:37 2025 +0900

    feat: 로그인 감지

commit bddd42e558cbfcd6fe1a429178139aaab63afcc5
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Mon Nov 24 23:56:54 2025 +0900

    feat: Update Md

commit 3c7b47a620dcf3440abe66a1b1b8d053731edff3
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Mon Nov 24 23:49:44 2025 +0900

    fix: Promise 중첩 버그 제거

commit 33b1fc0c9455ffad41be5715017bfb1023c6aa88
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Mon Nov 24 23:18:40 2025 +0900

    feat: workspace 연동 및 사이드 모달 getWorkspace에서만 동작

commit fea79a5f7ae20c5a77814177a4c65e52e304b8de
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Mon Nov 24 22:15:52 2025 +0900

    feat: 임시 저장

commit dd7564e9a4a8148c26e64d4563915c73c018d318
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Mon Nov 24 18:37:48 2025 +0900

    refactor: 안쓰는 컴포넌트 삭제

commit 8115d5e514f466c19d0289426cc4ca40b2cdadb8
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Mon Nov 24 17:06:52 2025 +0900

    feat: 쓸모없는 UI Component 삭제

commit 376459ba708d4baabedcf69ff55f59a8fb480bd0
Merge: 813750f 64c2c69
Author: gimseonjin616 <66009926+gimseonjin@users.noreply.github.com>
Date:   Mon Nov 24 14:36:14 2025 +0900

    Merge branch 'main' into feater/로그인-모달

commit 813750fae04c08694951500913d391563

--- a/packages/extension/src/locales/en.json
+++ b/packages/extension/src/locales/en.json
@@ -1,4 +1,96 @@
 {
+  "ui.popup.extension_active": "Extension Active",
+  "ui.popup.logo_alt": "8G Extension Logo",
+  "ui.confirmation.login_complete": "Click confirm after completing login.",
+  "ui.confirmation.close": "Close",
+  "ui.execution_status.executing": "Executing",
+  "ui.execution_status.completed": "Completed",
+  "ui.execution_status.failed": "Failed",
+  "ui.execution_status.loading": "Loading",
+  "ui.floating_notification.close": "Close",
+  "ui.general.confirm": "Confirm",
+  "ui.general.cancel": "Cancel",
+  "ui.general.close": "Close",
+  "ui.general.save": "Save",
+  "ui.general.delete": "Delete",
+  "ui.general.edit": "Edit",
+  "ui.general.add": "Add",
+  "ui.general.remove": "Remove",
+  "ui.general.yes": "Yes",
+  "ui.general.no": "No",
+  "ui.general.ok": "OK",
+  "ui.general.retry": "Retry",
+  "ui.general.skip": "Skip",
+  "ui.general.next": "Next",
+  "ui.general.previous": "Previous",
+  "ui.general.finish": "Finish",
+  "ui.general.loading": "Loading...",
+  "ui.workflow.executing": "Executing workflow",
+  "ui.workflow.step_executing": "Executing step {{stepName}}",
+  "ui.workflow.completed_successfully": "Workflow completed successfully",
+  "ui.workflow.failed_with_error": "Workflow failed: {{error}}",
+  "ui.workflow.step_completed": "Step completed: {{stepName}}",
+  "ui.workflow.step_failed": "Step failed: {{stepName}}",
+  "ui.workflow.waiting_for_user": "Waiting for user action",
+  "ui.workflow.timeout_warning": "Operation may timeout soon",
+  "ui.block.click.success": "Element clicked successfully",
+  "ui.block.click.failed": "Failed to click element",
+  "ui.block.input.success": "Text entered successfully",
+  "ui.block.input.failed": "Failed to enter text",
+  "ui.block.wait.waiting": "Waiting for condition",
+  "ui.block.wait.completed": "Wait condition met",
+  "ui.block.wait.timeout": "Wait condition timeout",
+  "ui.block.navigate.success": "Navigation completed",
+  "ui.block.navigate.failed": "Navigation failed",
+  "ui.block.extract.success": "Data extracted successfully",
+  "ui.block.extract.failed": "Failed to extract data",
+  "ui.block.form.get_success": "Form value retrieved",
+  "ui.block.form.set_success": "Form value set",
+  "ui.block.form.clear_success": "Form cleared",
+  "ui.block.form.failed": "Form operation failed",
+  "ui.block.scroll.success": "Scroll completed",
+  "ui.block.scroll.failed": "Scroll failed",
+  "ui.block.keypress.success": "Key pressed successfully",
+  "ui.block.keypress.failed": "Key press failed",
+  "ui.block.element_exists.found": "Element found",
+  "ui.block.element_exists.not_found": "Element not found",
+  "ui.block.save_assets.success": "Assets saved successfully",
+  "ui.block.save_assets.failed": "Failed to save assets",
+  "ui.block.fetch_api.success": "API request completed",
+  "ui.block.fetch_api.failed": "API request failed",
+  "ui.block.ai_parse.success": "AI parsing completed",
+  "ui.block.ai_parse.failed": "AI parsing failed",
+  "ui.block.transform_data.success": "Data transformation completed",
+  "ui.block.transform_data.failed": "Data transformation failed",
+  "ui.block.export_data.success": "Data exported successfully",
+  "ui.block.export_data.failed": "Data export failed",
+  "ui.block.network_catch.success": "Network request captured",
+  "ui.block.network_catch.failed": "Failed to capture network request",
+  "ui.block.wait_for_condition.success": "Condition met",
+  "ui.block.wait_for_condition.failed": "Condition not met",
+  "ui.error.element_not_found": "Element not found: {{selector}}",
+  "ui.error.selector_invalid": "Invalid selector: {{selector}}",
+  "ui.error.timeout": "Operation timed out",
+  "ui.error.network_error": "Network error occurred",
+  "ui.error.permission_denied": "Permission denied",
+  "ui.error.unknown_error": "An unknown error occurred",
+  "ui.error.workflow_execution_failed": "Workflow execution failed",
+  "ui.error.invalid_workflow": "Invalid workflow structure",
+  "ui.error.browser_not_supported": "Browser not supported",
+  "ui.error.extension_not_loaded": "Extension not loaded properly",
+  "ui.side_modal.title": "Scordi",
+  "ui.side_modal.service_integration": "{{serviceName}} Integration",
+  "ui.side_modal.open_panel": "Open Scordi Panel",
+  "ui.side_modal.close_panel": "Close Scordi Panel",
+  "ui.side_modal.service_in_progress": "Service integration in progress",
+  "ui.side_modal.already_logged_in": "It looks like you're already logged in",
+  "ui.side_modal.login_required": "Login required",
+  "ui.side_modal.current_workspace": "Currently connected workspace",
+  "ui.side_modal.admin_permission_required": "Admin access required to connect.",
+  "ui.side_modal.change_account_instruction": "To connect with a different {{serviceName}} account, please change the login account on this page.",
+  "ui.side_modal.refresh_login_status": "Check login status again",
+  "ui.side_modal.continue_instruction": "Click the 'Authenticate' button to continue.",
+  "ui.side_modal.authenticate": "Authenticate",
   "slack.roles.workspace_primary_owner": "Workspace Primary Owner",
   "slack.roles.workspace_owners": "Workspace Owners",
   "slack.roles.workspace_admins": "Workspace Admins",
