--- a/packages/extension/src/locales/ko.json
+++ b/packages/extension/src/locales/ko.json
@@ -1,4 +1,96 @@
 {
+  "ui.popup.extension_active": "익스텐션 활성화됨",
+  "ui.popup.logo_alt": "8G 익스텐션 로고",
+  "ui.confirmation.login_complete": "로그인 완료 후 확인 버튼을 클릭해주세요.",
+  "ui.confirmation.close": "닫기",
+  "ui.execution_status.executing": "실행 중",
+  "ui.execution_status.completed": "완료됨",
+  "ui.execution_status.failed": "실패함",
+  "ui.execution_status.loading": "로딩 중",
+  "ui.floating_notification.close": "닫기",
+  "ui.general.confirm": "확인",
+  "ui.general.cancel": "취소",
+  "ui.general.close": "닫기",
+  "ui.general.save": "저장",
+  "ui.general.delete": "삭제",
+  "ui.general.edit": "편집",
+  "ui.general.add": "추가",
+  "ui.general.remove": "제거",
+  "ui.general.yes": "예",
+  "ui.general.no": "아니오",
+  "ui.general.ok": "확인",
+  "ui.general.retry": "재시도",
+  "ui.general.skip": "건너뛰기",
+  "ui.general.next": "다음",
+  "ui.general.previous": "이전",
+  "ui.general.finish": "완료",
+  "ui.general.loading": "로딩 중...",
+  "ui.workflow.executing": "워크플로 실행 중",
+  "ui.workflow.step_executing": "단계 실행 중: {{stepName}}",
+  "ui.workflow.completed_successfully": "워크플로가 성공적으로 완료되었습니다",
+  "ui.workflow.failed_with_error": "워크플로 실행 실패: {{error}}",
+  "ui.workflow.step_completed": "단계 완료: {{stepName}}",
+  "ui.workflow.step_failed": "단계 실패: {{stepName}}",
+  "ui.workflow.waiting_for_user": "사용자 액션 대기 중",
+  "ui.workflow.timeout_warning": "곧 시간 초과될 수 있습니다",
+  "ui.block.click.success": "엘리먼트 클릭 성공",
+  "ui.block.click.failed": "엘리먼트 클릭 실패",
+  "ui.block.input.success": "텍스트 입력 성공",
+  "ui.block.input.failed": "텍스트 입력 실패",
+  "ui.block.wait.waiting": "조건 대기 중",
+  "ui.block.wait.completed": "대기 조건 충족",
+  "ui.block.wait.timeout": "대기 조건 시간 초과",
+  "ui.block.navigate.success": "네비게이션 완료",
+  "ui.block.navigate.failed": "네비게이션 실패",
+  "ui.block.extract.success": "데이터 추출 성공",
+  "ui.block.extract.failed": "데이터 추출 실패",
+  "ui.block.form.get_success": "폼 값 조회 완료",
+  "ui.block.form.set_success": "폼 값 설정 완료",
+  "ui.block.form.clear_success": "폼 초기화 완료",
+  "ui.block.form.failed": "폼 작업 실패",
+  "ui.block.scroll.success": "스크롤 완료",
+  "ui.block.scroll.failed": "스크롤 실패",
+  "ui.block.keypress.success": "키 입력 성공",
+  "ui.block.keypress.failed": "키 입력 실패",
+  "ui.block.element_exists.found": "엘리먼트 발견",
+  "ui.block.element_exists.not_found": "엘리먼트 찾을 수 없음",
+  "ui.block.save_assets.success": "에셋 저장 성공",
+  "ui.block.save_assets.failed": "에셋 저장 실패",
+  "ui.block.fetch_api.success": "API 요청 완료",
+  "ui.block.fetch_api.failed": "API 요청 실패",
+  "ui.block.ai_parse.success": "AI 파싱 완료",
+  "ui.block.ai_parse.failed": "AI 파싱 실패",
+  "ui.block.transform_data.success": "데이터 변환 완료",
+  "ui.block.transform_data.failed": "데이터 변환 실패",
+  "ui.block.export_data.success": "데이터 내보내기 성공",
+  "ui.block.export_data.failed": "데이터 내보내기 실패",
+  "ui.block.network_catch.success": "네트워크 요청 캡쳐 성공",
+  "ui.block.network_catch.failed": "네트워크 요청 캡쳐 실패",
+  "ui.block.wait_for_condition.success": "조건 충족",
+  "ui.block.wait_for_condition.failed": "조건 불충족",
+  "ui.error.element_not_found": "엘리먼트를 찾을 수 없습니다: {{selector}}",
+  "ui.error.selector_invalid": "잘못된 셀렉터: {{selector}}",
+  "ui.error.timeout": "작업 시간 초과",
+  "ui.error.network_error": "네트워크 오류가 발생했습니다",
+  "ui.error.permission_denied": "권한이 거부되었습니다",
+  "ui.error.unknown_error": "알 수 없는 오류가 발생했습니다",
+  "ui.error.workflow_execution_failed": "워크플로 실행 실패",
+  "ui.error.invalid_workflow": "잘못된 워크플로 구조",
+  "ui.error.browser_not_supported": "지원하지 않는 브라우저입니다",
+  "ui.error.extension_not_loaded": "익스텐션이 제대로 로드되지 않았습니다",
+  "ui.side_modal.title": "스코디",
+  "ui.side_modal.service_integration": "{{serviceName}} 연동",
+  "ui.side_modal.open_panel": "스코디 패널 열기",
+  "ui.side_modal.close_panel": "스코디 패널 닫기",
+  "ui.side_modal.service_in_progress": "서비스 연동 진행 중",
+  "ui.side_modal.already_logged_in": "이미 로그인이 되어 있는 것 같아요",
+  "ui.side_modal.login_required": "로그인이 필요합니다",
+  "ui.side_modal.current_workspace": "현재 연결된 워크스페이스",
+  "ui.side_modal.admin_permission_required": "관리자 권한이 있는 곳만 연결 할 수 있어요.",
+  "ui.side_modal.change_account_instruction": "다른 {{serviceName}} 계정으로 연동하시려면 이 페이지에서 로그인 계정을 변경해주세요.",
+  "ui.side_modal.refresh_login_status": "로그인 상태 다시 확인",
+  "ui.side_modal.continue_instruction": "계속 진행하시려면 \"인증\" 버튼을 클릭하세요.",
+  "ui.side_modal.authenticate": "인증",
   "slack.roles.workspace_primary_owner": "워크스페이스 주 소유자",
   "slack.roles.workspace_owners": "워크스페이스 소유자",
   "slack.roles.workspace_admins": "워크스페이스 관리자",
